[WPE][GTK] TextureMapperPlatformLayerDmabuf.cpp:107:5: error: 'glEGLImageTargetTexture2DOES' was not declared in this scope https://bugs.webkit.org/show_bug.cgi?id=248032

Reviewed by NOBODY (OOPS!).

glEGLImageTargetTexture2DOES is not declared unless we define
GL_GLEXT_PROTOTYPES.

* Source/WebCore/platform/graphics/OpenGLShims.h: