Source/WebCore/platform/graphics/OpenGLShims.h
@@ -20,6 +20,8 @@
 #ifndef OpenGLShims_h
 #define OpenGLShims_h
 
+#define GL_GLEXT_PROTOTYPES 1
+
 #if OS(WINDOWS)
 #include <GL/gl.h>
 #include <GLES2/gl2.h>
